# VerificationK

./: RunKLEE.sh
CodeVerification/: ReplaceScanf.py  RunKLEE.py
DetectScanF_ClangHL/: Commands.sh  DetectScanf.cpp
DetectScanF_ClangHL/TestSet/: Test.c
Klee_Codes/: RunKLEE.sh  Test.c
Klee_Codes/3107/: 300486_buggy.c  300486_correct.c  300501_buggy.c  300501_correct.c  300527_buggy.c  300527_correct.c  300531_buggy.c  300531_correct.c  300536_buggy.c  300536_correct.c  300560_buggy.c  300560_correct.c  300562_buggy.c  300562_correct.c  300579_buggy.c  300579_correct.c  300581_buggy.c  300581_correct.c  300583_buggy.c  300583_correct.c
Klee_Codes/Lab-9-3105/: Main.c  main.bc
Klee_Codes/Lab9-3105/: Main.c  Test.c
Klee_Codes/Lab9-3107/: 300486_buggy.c  300486_correct.c  300501_buggy.c  300501_correct.c  300527_buggy.c  300527_correct.c  300531_buggy.c  300531_correct.c  300536_buggy.c  300536_correct.c  300560_buggy.c  300560_correct.c  300562_buggy.c  300562_correct.c  300579_buggy.c  300579_correct.c  300581_buggy.c  300581_correct.c  300583_buggy.c  300583_correct.c  Main.c
LLVM_T/: Commands.sh
LLVM_T/DetectScanf_llvmIR/: Commands.sh  llvm_scanf_tool  llvm_scanf_tool.cpp
LLVM_T/DetectScanf_llvmIR/PythonLLVMLite/: DetectScanf.py
LLVM_T/DetectScanf_llvmIR/TestSet/: test.ll
LLVM_T/ReplacePuts/: CMakeLists.txt  Test.c  main.cpp
LLVM_T/TestEnv/: example.c  example.cbe.c  example.ll  optimized.bc  optimized.ll  simple-tool.cpp
Others/: RunKLEE.sh
Others/ITSP_Z3_Examples/: Lab3_2.py  Lab4_2.py  Lab9_3107.py
Others/KLEE/Lab-4-2825/: Test1.c
Others/KLEE/Test1/: Test.c
Others/KLEE/Test2/: Test.c
Others/KLEE/Test3/: test.c  test2.c  test3.c
